# INRAE_Project

./: .gitignore  README.md  pyproject.toml
Segmentation_methods/: .gitignore  main.ipynb  train.py  utils.py
Segmentation_methods/Dataset/: Custom.py  test.py
Segmentation_methods/Modeles/: Model.py
Segmentation_methods/Segmentation_methods/: .env  main.ipynb  utils.py
Segmentation_methods/Segmentation_methods/Dataset/: Custom.py  test.py
segmentation_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
