[project]
name = "segmentation_project"
version = "0.1.0"
description = "Plant disease segmentation using PyTorch"
authors = [{ name="Rchaki", email="rchaki@example.com" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "torch",
    "matplotlib",
    "opencv-python",
    "scikit-learn",
    "Pillow",
    "python-dotenv"
]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
[tool.black]
line-length = 88
target-version = ['py310']  # ou 'py39', 'py311', etc. selon ta version de Python
exclude = '''
/(
    \.git
  | \.venv
  | \.env
  | build
  | dist
  | .*\.egg-info
)/
'''